Bug fixes: - Changed table styles for more versatility in tables without a header. - Made the words break when they are too long in gallery images. - Removed height from spacer widget. - Made the form full width. - Made the dark gallery overlay be the full width of the screen.

--- a/less/main/table.less
+++ b/less/main/table.less
@@ -16,7 +16,8 @@ table {
 	border: none;
 	border-collapse: separate;
 	border-spacing: 0;
-	margin: 1.5em 0;
+	border-top: 0.2em solid @color-text--light;
+	margin: 0;
 	hyphens: auto;
 	.paragraph;
 }
@@ -38,6 +39,10 @@ td {
 	border-bottom: 1px solid @color-text--light;
 	line-height: 1.2em;
 	padding: 1em 0.5em;
+}
+
+tr:last-child td {
+	border-bottom: 0.2em solid @color-text--light;
 }
 
 // Table Head
