--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -92,7 +92,7 @@
 }
 
 .form {
-	max-width: @layout-width-desktop;
+	max-width: 100%;
 	margin: 0 auto;
 
 	@media @tablet-horizontal {
