--- a/less/widgets/widgets.less
+++ b/less/widgets/widgets.less
@@ -323,7 +323,6 @@ hr.line__rule {
 .widget {
 	&[data-name="space"],
 	&[data-widget-type="space"] {
-		height: 2em;
 	}
 }
 
